--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.18.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "nodemon index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +41,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anderswallace/spotify-app.git"
@@ -52,5 +51,8 @@
   "bugs": {
     "url": "https://github.com/anderswallace/spotify-app/issues"
   },
-  "homepage": "https://github.com/anderswallace/spotify-app#readme"
+  "homepage": "https://github.com/anderswallace/spotify-app#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
