--- a/package.json
+++ b/package.json
@@ -1,57 +1,19 @@
 {
   "name": "spotify-app",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "query-string": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anderswallace/spotify-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anderswallace/spotify-app/issues"
+  "dependencies": {
+    "axios": "^1.3.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.18.2",
+    "query-string": "^8.1.0"
   },
-  "homepage": "https://github.com/anderswallace/spotify-app#readme",
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
