--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.3.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
-    "query-string": "^8.1.0"
+    "query-string": "^8.1.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
